added test for incorrect types in list, updated .travis.yml to run test_math_lib, added badge to readme

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ before_install:
     - conda install --yes python=3.6
       
 script:
+    - python -m unittest test_math_lib.py
     - bash test_viz.sh
     - python test_viz.py
