--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,6 @@ script:
     - python -m unittest test_math_lib.py
     - bash gen_data_random.sh | python -m unittest test_get_data.py
     - bash gen_data.sh | python -m unittest test_get_data.py
+    - python -m unittest test_data_viz.py
     - bash test_viz.sh
     - python test_viz.py
