--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,4 @@ script:
     - bash gen_data_random.sh | python -m unittest test_get_data.py
     - bash gen_data.sh | python -m unittest test_get_data.py
     - python -m unittest test_data_viz.py
-    - bash test_viz.sh
-    - python test_viz.py
+    - pycodetest *.py
