--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
     - conda install -y pycodestyle
     - conda install --yes python=3.6
     - conda install --yes numpy
+    - conda install --yes matplotlib
       
 script:
     - python -m unittest test_math_lib.py
