--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
     - conda install --yes python=3.6
     - conda install --yes numpy
     - conda install --yes matplotlib
+    - conda install --yes pycodestyle
       
 script:
     - python -m unittest test_math_lib.py
